syntax = "proto3";

package comment;

option go_package = "gen/comment-service/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service CommentService {
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse) {
    option (google.api.http) = {
      get: "/comments"
    };
  }

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {
    option (google.api.http) = {
      post: "/comments"
      body: "*"
    };
  }

  rpc GetComment(GetCommentRequest) returns (GetCommentResponse) {
    option (google.api.http) = {
      get: "/comments/{id}"
    };
  }

  rpc UpdateComment(UpdateCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/comments/{id}"
      body: "*"
    };
  }

  rpc DeleteComment(DeleteCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/comments/{id}"
    };
  }
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  string parent_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  Pagination pagination = 2;
}

message CreateCommentRequest {
  string post_id = 1;
  string content = 2;
  string parent_id = 3;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message GetCommentRequest {
  string id = 1;
}

message GetCommentResponse {
  Comment comment = 1;
}

message UpdateCommentRequest {
  string id = 1;
  string content = 2;
}

message DeleteCommentRequest {
  string id = 1;
}

message Pagination {
  int32 current_page = 1;
  int32 per_page = 2;
  int32 total_items = 3;
  int32 total_pages = 4;
}